Added description for the Support Vector Machine and started hyperparameterizing the svm

--- a/Stock Picker.ipynb
+++ b/Stock Picker.ipynb
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First we structure the data. We collected stocks listed on NYSE and NASDAQ fundamental financial ratios of Q4 2017 as features(X) as well as price information of Q4 2017-18 from Bloomberg. We drop the Nan when Bloomberg has no avilable data. Bloomberg is the lead market participant in financial data provider. If they don't have the information, doubt other data vendor (FACTSET, Reuters) has it."
+    "First we structure the data. We collected stocks listed on NYSE and NASDAQ fundamental financial ratios of Q4 2017 as features(X) as well as price information of Q4 2017-18 from Bloomberg. We drop the Nan when Bloomberg has no avilable data. Bloomberg is the lead market participant in financial data provider. If they don't have the information, doubt other data vendor (FACTSET, Reuters) has it. We split the data by the function that exists in sklearn. The reason behind it is that the function probably handles splitting the data a lot better than we would have and it is better practice to not re-write and use already existing code."
    ]
   },
   {
@@ -198,7 +198,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Alex write here The financial ratios have been the key to fundamental analysis. "
+    "Picking the financial ratios was part of the feature engineering that we had to do for this project. As one might know, there are a number of financial ratios that can describe the fundamental state of company. They usually contain information about the health/growth/profitability of the company, which are all important factors for the company and if an investor feels it is good enough to invest in.\n",
+    "\n",
+    "We chose the ratios based on the 2 following factors:\n",
+    "    1) Popularity (among investors)\n",
+    "    2) Availability from our data source (Bloomberg)\n",
+    "    \n",
+    "As far as 1) goes, the ratios we picked were favourites among fundamental investors. They have been known to be used for fundamental analysis for many years and seem to describe a company and it's future performance well. There are a number of other factors/ratios that we wanted to use, to further the analysis, however our data vendor either kept running out of data, or there was not enought coverage of those ratios for the companies we selected."
    ]
   },
   {
@@ -779,6 +785,39 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SVM: Support Vector Machine"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The SVM is a machine learning technique most often utilized for classification. The goal of the learning technique is to draw a hyperplane(in linear 2D SVM that is a line) between data that is distinctly classified in different categories. The best choice will be the hyperplane that leaves the maximum margin from both classes. The goal of the svm algorithm is to maximize the separability between the data points and the hyperplane.\n",
+    "\n",
+    "Any hyperplane can be written as $w \\cdot x - b = 0$, and having a binary classification of -1,1 yields the following 2 equations $w \\cdot x - b = -1$ and $w \\cdot x - b = 1$. Geometrically, the distance between these 2 lines (margin) is $\\frac{2}{||w||}$. The job of the classifier is to minimize the fraction with the constraints of correct classification. More conretely, the minimization that needs to take place is $\\min{w}||w||^2$ with the constraint of $y_i(w^Tx_i+b) >= 1$\n",
+    "\n",
+    "In general, there is a trade off between the margin and the number of mistakes on the data i.e. the points can be linearly separated but there is a narrow margin or the margin solution is better even though some constraints might be violated. As a result, slack variables can be introduced ($\\xi$), which would control the aforementioned effect. Thus we reach a \"soft\" margin solution where the optimization becomes $\\min{w}||w||^2 + C\\sum_{i}^{N}\\xi_i$ subject to $y_i(w^Tx_i+b) >= 1-\\xi_i$, where C is a regularization parameter.\n",
+    "\n",
+    "Rewriting the the constraint $y_i(w^Tx_i+b) >= 1-\\xi_i$ as $y_if(x_i)>=1-\\xi_i$ and with $\\xi_i>0$ we get $\\xi_i=max(0,1-y_if(x_i)$, which makes our problem an uncostrainted optimization over w of the form: $\\min||w||^2+C\\sum_{i}^{N}\\max(0,1-y_if(\\xi_i))$ with the second part of the equation being the loss function.\n",
+    "\n",
+    "\n",
+    "Our problem is perfect for a SVM as it's main function is to classify companies as underperforming or overperforming. Minimizing the loss function would create a hyperplane that would distinguish between overperforming and underperforming companies. \n",
+    "\n",
+    "In terms of hyperparameters, scikitlearn svm has 2 main ones. The C and the gamma. Following https://www.csie.ntu.edu.tw/~cjlin/papers/guide/guide.pdf, we set the range of the hyperparameters accordingly. Finally, since it is hard to visualize what our dataset would look like, we added another hyperparameter which was the kernel of the svm. We excluded the polynomial kernel, as it took a very long time to train and fit the data.\n",
+    "\n",
+    "The metrics that were used for the data\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -797,7 +836,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
