--- a/Stock Picker.ipynb
+++ b/Stock Picker.ipynb
@@ -810,7 +810,7 @@
     "\n",
     "In terms of hyperparameters, scikitlearn svm has 2 main ones. The C and the gamma. Following https://www.csie.ntu.edu.tw/~cjlin/papers/guide/guide.pdf, we set the range of the hyperparameters accordingly. Finally, since it is hard to visualize what our dataset would look like, we added another hyperparameter which was the kernel of the svm. We excluded the polynomial kernel, as it took a very long time to train and fit the data.\n",
     "\n",
-    "The metrics that were used for the data\n",
+    "The metrics that were used for the data are similar to the regressions.\n",
     "\n"
    ]
   },
