Finilized the project

--- a/Stock Picker.ipynb
+++ b/Stock Picker.ipynb
@@ -417,12 +417,12 @@
     "## Exploratory Data Analysis\n",
     "\n",
     "The labelled data seems to slightly tilited to \"underperform\" based on the less than 0.5 mean for both train and test data sets. Features overall varies in a large range within individual stock's features and across. We have the following as features<br>\n",
-    "Cash ratio $\\frac{cash \\ and \\ cash \\ equivalents }{total \\ asset}$. This measures the company's most liquid assets. There is a sweetspot as company wants to invest but has enough cash.<br>\n",
+    "Cash ratio $\\frac{cash \\ and \\ cash \\ equivalents }{total \\ asset}$. This measures the company's most liquid assets. There is a sweetspot as companies want to invest so it needs enough cash.<br>\n",
     "Price to book $\\frac{Market \\ capitalisation}{Book \\ Value}$. This measures the market value of the company compare to its book value(owned asset - liability). High ratio could mean the market is overvaluing the company.<br>\n",
     "Price to Earning $\\frac{share \\ price}{earning \\ per \\ share}$. Market price to company's earning, usually low means high growing potential.<br>\n",
     "Short interest ratio $\\frac{shares \\ which \\ have \\ been \\ shorted \\ or \\ unsold}{trading \\ volume}$. The amount that bets against the company. <br>\n",
     "Debt to Equity $\\frac{Total \\ Debt}{Book \\ Equity}$ The higher the ratio, the more the company is leveraged.<br>\n",
-    "EPS earning per share. $earnings per shares outstanding.<br>"
+    "EPS earning per share. Earnings per shares outstanding.<br>"
    ]
   },
   {
@@ -905,7 +905,7 @@
    "metadata": {},
    "source": [
     "## Normalising Data\n",
-    "We will normalise the data before fitting the model. It is essential to normalise the data espcially for penalised regression as the regression are non-invariant. We would not want feature which varies a lot carry more weight than those which don't. "
+    "We will normalise the data before fitting the model. It is essential to normalise the data especially for penalised regression as the regressions are non-invariant. We would not want feature which varies a lot carry more weight than those which don't. "
    ]
   },
   {
@@ -1280,14 +1280,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can conclude from the final line that regression might not be the best model to use, which is logical as this is a classification proble."
+    "We can conclude from the final line that regression might not be the best model to use, which is logical as this is a classification problem."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cross validation and Ridge Classidier for further improvement\n",
+    "## Cross validation and Ridge Classifier for further improvement\n",
     "\n",
     "We also did a k fold cross validation of the three regression as we feel a single split of training and testing data does not represent the data entirely. K fold cross validation works by randomly assigning data into bins evenly and iteratively select one as the test set, the rest as the training set. This is coded as a python script, \"stock_pred_kfold.py\" due to the massive loop. The F1 results are presented below"
    ]
@@ -1370,7 +1370,7 @@
    "source": [
     "The SVM is a machine learning technique most often utilized for classification. The goal of the learning technique is to draw a hyperplane(in linear 2D SVM this would be a line) between data that is distinctly classified in different categories. The best choice will be the hyperplane that leaves the maximum margin from both classes. The goal of the svm algorithm is to maximize the separability between the data points and the hyperplane.\n",
     "<br><br>\n",
-    "Any hyperplane can be written as $w \\cdot x - b = 0$, and having a binary classification of -1,1 yields the following 2 equations $w \\cdot x - b = -1$ and $w \\cdot x - b = 1$. Geometrically, the distance between these 2 lines (margin) is $\\frac{2}{||w||}$. The job of the classifier is to minimize this fraction with the constraints of correct classification. More conretely, the minimization that needs to take place is $\\min_{w}||w||^2$ with the constraint of $y_i(w^Tx_i+b) >= 1$\n",
+    "Any hyperplane can be written as $w \\cdot x - b = 0$, and having a binary classification of -1,1 yields the following 2 equations $w \\cdot x - b = -1$ and $w \\cdot x - b = 1$. Geometrically, the distance between these 2 lines (margin) is $\\frac{2}{||w||}$. The job of the classifier is to minimize this fraction with the constraints of correct classification. More concretely, the minimization that needs to take place is $\\min_{w}||w||^2$ with the constraint of $y_i(w^Tx_i+b) >= 1$\n",
     "<br><br>\n",
     "In general, there is a trade off between the margin and the number of mistakes on the data i.e. the points can be linearly separated but there is a narrow margin or the margin solution is better even though some constraints might be violated. As a result, slack variables can be introduced ($\\xi$), which would control the aforementioned effect. Thus we reach a \"soft\" margin solution where the optimization becomes $\\min_{w}||w||^2 + C\\sum_{i}^{N}\\xi_i$ subject to $y_i(w^Tx_i+b) >= 1-\\xi_i$, where C is a regularization parameter.\n",
     "<br><br>\n",
@@ -1407,7 +1407,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following functions are defined in order to help with the production of the outputs of the SVM. Product metrics produces the confusion metrics via the built-in variable and the important metrics that were mentioned before (precision and recall)\n",
+    "The following functions are defined in order to help with the production of the outputs of the SVM. Product metrics produces the confusion metrics via the built-in function and the precision as well as the recall.\n",
     "\n",
     "The run model splits the dataset into train and validation set and trains the SVM model, as well as predicting using both the train and validation set. The function was created in order to use hyper-parametrization on the important variables."
    ]
@@ -1451,7 +1451,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This specific piece of code takes a long time to run which is why the results are saved in a csv. The results are going to be uploaded for further examination. To produce the content in results.csv uncomment the commented lines"
+    "This specific piece of code takes a long time to run which is why the results are saved in a csv. The results are going to be uploaded for further examination. To produce the content in results.csv uncomment the commented lines and comment the Cs and gammas lines."
    ]
   },
   {
@@ -1486,31 +1486,7 @@
       "test_recall        0.0732899\n",
       "train_precision          0.5\n",
       "train_recall       0.0915033\n",
-      "Name: 2, dtype: object\n",
-      "C                         10\n",
-      "gamma                      1\n",
-      "algo                  linear\n",
-      "test_precision      0.608108\n",
-      "test_recall        0.0732899\n",
-      "train_precision          0.5\n",
-      "train_recall       0.0915033\n",
-      "Name: 3, dtype: object\n",
-      "C                       100\n",
-      "gamma                   0.1\n",
-      "algo                 linear\n",
-      "test_precision     0.559633\n",
-      "test_recall        0.198697\n",
-      "train_precision        0.48\n",
-      "train_recall       0.235294\n",
-      "Name: 4, dtype: object\n",
-      "C                       100\n",
-      "gamma                   0.2\n",
-      "algo                 linear\n",
-      "test_precision     0.559633\n",
-      "test_recall        0.198697\n",
-      "train_precision        0.48\n",
-      "train_recall       0.235294\n",
-      "Name: 5, dtype: object\n"
+      "Name: 2, dtype: object\n"
      ]
     }
    ],
@@ -1519,7 +1495,7 @@
     "#gammas = [2**x for x in range(-10,10,2)]\n",
     "#Cs = [2**x for x in range(-10,10,2)]\n",
     "Cs = [10,100,1000]\n",
-    "gammas = [0.1,0.2,0.5,1.0]\n",
+    "gammas = [0.1,0.2,0.5]\n",
     "algos = ['linear','rbf','sigmoid']\n",
     "\n",
     "counter = 0\n",
@@ -1542,7 +1518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1680,7 +1656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1787,7 +1763,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In general, we found that regression methods do not yield great results when it comes to predicting the class. The penalized regressions(LASSO and Ridge) end up converging to a standard OLS regression, as the best models have lambda=0. As explained, this is to be expected. SVM, being a better classifier, produces more meaningful results with the rbf kernel performing (in general) better than the other kernels. Via hyper-parameterization we find that the best hyper-parameters for the rbf kernel are C=16 and gamma = 0.015625. Exploring the most important features for the \n",
+    "In general, we found that regression methods do not yield great results when it comes to predicting the class. The penalized regressions(LASSO and Ridge) end up converging to a standard OLS regression, as the best models have lambda=0. As explained, this is to be expected. SVM, being a better classifier, produces more meaningful results with the rbf kernel performing (in general) better than the other kernels. Via hyper-parameterization we find that the best hyper-parameters for the rbf kernel are C=16 and gamma = 0.015625. Exploring the most important features for the svm cannot be determined unfortunately, as the rbf does not produce any concrete coefficients.\n",
     "\n",
     "The toughest problem to face in this project was the lack and the structure of data. Even using Bloomberg, we had trouble retrieving data without missing information, something which plagued our data set. Throughout this process, we discovered that even though understanding the theory and being able to apply it is very important, having the best representation of data is the most important part.\n",
     "\n",
