Added a few extra lines for the result of the regression

--- a/Stock Picker.ipynb
+++ b/Stock Picker.ipynb
@@ -1763,13 +1763,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In general, we found that regression methods do not yield great results when it comes to predicting the class. The penalized regressions(LASSO and Ridge) end up converging to a standard OLS regression, as the best models have lambda=0. As explained, this is to be expected. SVM, being a better classifier, produces more meaningful results with the rbf kernel performing (in general) better than the other kernels. Via hyper-parameterization we find that the best hyper-parameters for the rbf kernel are C=16 and gamma = 0.015625. Exploring the most important features for the svm cannot be determined unfortunately, as the rbf does not produce any concrete coefficients.\n",
+    "In general, we found that regression methods do not yield great results when it comes to predicting the class. The penalized regressions(LASSO and Ridge) end up converging to a standard OLS regression, as the best models have lambda=0. As explained, this is to be expected. SVM, being a classifier, produces more meaningful results with the rbf kernel performing (in general) better than the other kernels. Via hyper-parameterization we find that the best hyper-parameters for the rbf kernel are C=16 and gamma = 0.015625. Exploring the most important features for the svm cannot be determined unfortunately, as the rbf does not produce any concrete coefficients.\n",
     "\n",
-    "The toughest problem to face in this project was the lack and the structure of data. Even using Bloomberg, we had trouble retrieving data without missing information, something which plagued our data set. Throughout this process, we discovered that even though understanding the theory and being able to apply it is very important, having the best representation of data is the most important part.\n",
+    "It should also be noted that in the regression, we did not add the f1 scores of the train and test set, as we did for the SVM. This was because the results were pretty abysmal so we felt that there would not be any benefit by doing this. Even if a better model was discovered, its performance would not be on par with the svm.\n",
     "\n",
-    "As far as improvements go, adding more features would definitely benefit the result as the description of the companies would be much better.\n",
+    "The toughest problem we had to face in this project was the lack and the structure of data. Even using Bloomberg, we had trouble retrieving data without missing information, something which plagued our data set. Throughout this process, we discovered that even though understanding the theory and being able to apply it is very important, having the best data and the best representation of it is the most important part.\n",
+    "\n",
+    "As far as improvements go, adding more features would definitely benefit the result as the description of the companies would be much better and having more and reliable data would also add a lot of value.\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1788,7 +1797,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
